S2F parallel codegen: Update to work on Android as well

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -288,7 +288,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 3.957366943359375 seconds.\n"
+      "Finished BSSN symbolic expressions in 3.9977848529815674 seconds.\n"
      ]
     }
    ],
@@ -606,29 +606,29 @@
       "Generating C code for psi4_im_pt0 in SinhSpherical coordinates.\n",
       "Generating C code for psi4_re_pt0 in SinhSpherical coordinates.\n",
       "Generating C code for psi4_re_pt1 in SinhSpherical coordinates.\n",
-      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
       "Generating C code for psi4_im_pt1 in SinhSpherical coordinates.\n",
+      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
       "Generating C code for psi4_re_pt2 in SinhSpherical coordinates.\n",
       "Generating C code for psi4_im_pt2 in SinhSpherical coordinates.\n",
       "Generating C code for BSSN RHSs in SinhSpherical coordinates.\n",
-      "Finished generating psi4_im_pt1 in 2.8706374168395996 seconds.\n",
+      "Finished generating psi4_im_pt1 in 2.9408063888549805 seconds.\n",
       "Generating C code for Ricci tensor in SinhSpherical coordinates.\n",
-      "Finished generating psi4_re_pt1 in 5.690831899642944 seconds.\n",
+      "Finished generating psi4_re_pt1 in 5.182200908660889 seconds.\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Finished generating psi4_im_pt0 in 15.40141773223877 seconds.\n",
+      "Finished generating psi4_im_pt0 in 14.692614793777466 seconds.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.20847463607788086 seconds.\n",
+      "Finished gamma constraint C codegen in 0.2635180950164795 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 23.32347083091736 seconds.\n",
-      "Finished generating psi4_re_pt0 in 30.50697946548462 seconds.\n",
-      "Finished generating psi4_im_pt2 in 32.586859703063965 seconds.\n",
-      "Finished BL initial data codegen in 33.83334708213806 seconds.\n",
-      "Finished generating psi4_re_pt2 in 45.37008237838745 seconds.\n",
+      "Finished Hamiltonian C codegen in 22.359497785568237 seconds.\n",
+      "Finished generating psi4_re_pt0 in 29.410285472869873 seconds.\n",
+      "Finished generating psi4_im_pt2 in 31.397085666656494 seconds.\n",
+      "Finished BL initial data codegen in 32.679014682769775 seconds.\n",
+      "Finished generating psi4_re_pt2 in 47.06175351142883 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 71.06982779502869 seconds.\n",
+      "Finished BSSN_RHS C codegen in 72.92636895179749 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 94.38814783096313 seconds.\n"
+      "Finished Ricci C codegen in 98.4065797328949 seconds.\n"
      ]
     }
    ],
@@ -638,7 +638,8 @@
     "\n",
     "# Step 1: Create a list of functions we wish to evaluate in parallel\n",
     "funcs = [Psi4re,Psi4re,Psi4re,Psi4im,Psi4im,Psi4im, BrillLindquistID,BSSN_RHSs,Ricci,Hamiltonian,gammadet]\n",
-    "# Step 1.a: Define master function for parallelization.\n",
+    "\n",
+    "# Step 1.a: Define master function for calling all above functions.\n",
     "#           Note that lambdifying this doesn't work in Python 3\n",
     "def master_func(idx):\n",
     "    if idx < 3: # Call Psi4re(arg)\n",
@@ -648,15 +649,21 @@
     "    else: # All non-Psi4 functions:\n",
     "        funcs[idx]()\n",
     "\n",
-    "# Step 2: Evaluate list of functions in parallel if possible;\n",
-    "#         otherwise fallback to serial evaluation:\n",
-    "# It's a mess to get working in Windows, so we don't bother. :/\n",
-    "#  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
-    "if os.name != 'nt': \n",
+    "try:\n",
+    "    if os.name == 'nt':\n",
+    "        # It's a mess to get working in Windows, so we don't bother. :/\n",
+    "        #  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
+    "        raise Exception(\"Parallel codegen currently not available in Windows\")\n",
+    "    # Step 1.b: Import the multiprocessing module.\n",
+    "    import multiprocessing\n",
+    "\n",
+    "    # Step 1.c: Evaluate list of functions in parallel if possible;\n",
+    "    #           otherwise fallback to serial evaluation:\n",
     "    pool = multiprocessing.Pool()\n",
     "    pool.map(master_func,range(len(funcs)))\n",
-    "else:\n",
-    "    # As fallback, evaluate functions in serial.\n",
+    "except:\n",
+    "    # Steps 1.b-1.c, alternate: As fallback, evaluate functions in serial.\n",
+    "    #       This will happen on Android and Windows systems\n",
     "    for idx in range(len(funcs)):\n",
     "        master_func(idx)"
    ]
@@ -1233,17 +1240,17 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 15.84114933013916 seconds.\n",
+      "Finished executing in 17.238831043243408 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 15.852816581726074 seconds.\n",
+      "Finished in 17.251811027526855 seconds.\n",
       "\n",
       "\n",
       "Now running. Should take ~30 minutes...\n",
       "\n",
       "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 270 8 2 1.0`...\n",
-      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 874.58 | gp/s 5.71e+055\n",
-      "Finished executing in 823.4302976131439 seconds.\n",
-      "Finished in 823.4488732814789 seconds.\n",
+      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 845.44 | gp/s 5.52e+055\n",
+      "Finished executing in 851.7999768257141 seconds.\n",
+      "Finished in 851.8250064849854 seconds.\n",
       "\n",
       "\n"
      ]
@@ -1312,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1427,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb to latex\n",
-      "[NbConvertApp] Writing 172582 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.tex\n",
+      "[NbConvertApp] Writing 173004 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
