--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -275,7 +275,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 5.995538711547852 seconds.\n"
+      "Finished BSSN symbolic expressions in 3.405642032623291 seconds.\n"
      ]
     }
    ],
@@ -481,44 +481,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
-      "Generating C code for Ricci tensor in Spherical coordinates.\n",
-      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
+      "Generating C code for BSSN RHSs in Spherical coordinates.\n",
+      "Generating C code for Ricci tensor in Spherical coordinates.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.17491722106933594 seconds.\n",
-      "Finished BL initial data codegen in 7.927518844604492 seconds.\n",
+      "Finished gamma constraint C codegen in 0.12624073028564453 seconds.\n",
+      "Finished BL initial data codegen in 6.411649227142334 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 13.924108505249023 seconds.\n",
+      "Finished Hamiltonian C codegen in 10.280866861343384 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 26.257081747055054 seconds.\n",
+      "Finished BSSN_RHS C codegen in 15.390990972518921 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 58.553351640701294 seconds.\n"
+      "Finished Ricci C codegen in 36.85887026786804 seconds.\n"
      ]
     }
    ],
    "source": [
-    "# Step 0: Import the multiprocessing module.\n",
-    "import multiprocessing\n",
-    "\n",
     "# Step 1: Create a list of functions we wish to evaluate in parallel\n",
     "funcs = [BrillLindquistID,BSSN_RHSs,Ricci,Hamiltonian,gammadet]\n",
     "\n",
-    "# Step 1.a: Define master function for parallelization.\n",
-    "#           Note that lambdifying this doesn't work in Python 3\n",
-    "def master_func(arg):\n",
-    "    funcs[arg]()\n",
+    "try:\n",
+    "    if os.name == 'nt':\n",
+    "        # It's a mess to get working in Windows, so we don't bother. :/\n",
+    "        #  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
+    "        raise Exception(\"Parallel codegen currently not available in Windows\")\n",
+    "    # Step 1.a: Import the multiprocessing module.\n",
+    "    import multiprocessing\n",
     "\n",
-    "# Step 2: Evaluate list of functions in parallel if possible;\n",
-    "#         otherwise fallback to serial evaluation:\n",
-    "# It's a mess to get working in Windows, so we don't bother. :/\n",
-    "#  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
-    "if os.name != 'nt': \n",
+    "    # Step 1.b: Define master function for parallelization.\n",
+    "    #           Note that lambdifying this doesn't work in Python 3\n",
+    "    def master_func(arg):\n",
+    "        funcs[arg]()\n",
+    "\n",
+    "    # Step 1.c: Evaluate list of functions in parallel if possible;\n",
+    "    #           otherwise fallback to serial evaluation:\n",
     "    pool = multiprocessing.Pool()\n",
     "    pool.map(master_func,range(len(funcs)))\n",
-    "else:\n",
-    "    # As fallback, evaluate functions in serial.\n",
+    "except:\n",
+    "    # Steps 1.b-1.c, alternate: As fallback, evaluate functions in serial.\n",
+    "    #       This will happen on Android and Windows systems\n",
     "    for func in funcs:\n",
     "        func()"
    ]
@@ -1064,14 +1067,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 11.245264768600464 seconds.\n",
+      "Finished executing in 7.224975109100342 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 1122.93 | gp/s 1.58e+05\n",
-      "Finished executing in 24.087602138519287 seconds.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 707.10 | gp/s 3.15e+055\n",
-      "Finished executing in 38.125478982925415 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 8475.39 | gp/s 1.19e+06\n",
+      "Finished executing in 3.217212438583374 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 2532.08 | gp/s 1.13e+06\n",
+      "Finished executing in 10.841820478439331 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1496,7 +1499,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb to latex\n",
-      "[NbConvertApp] Writing 166642 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
+      "[NbConvertApp] Writing 167532 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
