--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -275,7 +275,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 3.405642032623291 seconds.\n"
+      "Finished BSSN symbolic expressions in 4.844878673553467 seconds.\n"
      ]
     }
    ],
@@ -481,20 +481,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Generating C code for BSSN RHSs in Spherical coordinates.\n",
       "Generating C code for Ricci tensor in Spherical coordinates.\n",
+      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
+      "Generating C code for BSSN RHSs in Spherical coordinates.\n",
+      "Finished BL initial data codegen in 14.507330417633057 seconds.\n",
+      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.12624073028564453 seconds.\n",
-      "Finished BL initial data codegen in 6.411649227142334 seconds.\n",
+      "Finished gamma constraint C codegen in 0.27500176429748535 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 10.280866861343384 seconds.\n",
+      "Finished Hamiltonian C codegen in 25.12691020965576 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 15.390990972518921 seconds.\n",
+      "Finished BSSN_RHS C codegen in 31.759349822998047 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 36.85887026786804 seconds.\n"
+      "Finished Ricci C codegen in 58.21298289299011 seconds.\n"
      ]
     }
    ],
@@ -1067,14 +1067,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 7.224975109100342 seconds.\n",
+      "Finished executing in 10.238182067871094 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 8475.39 | gp/s 1.19e+06\n",
-      "Finished executing in 3.217212438583374 seconds.\n",
-      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 2532.08 | gp/s 1.13e+06\n",
-      "Finished executing in 10.841820478439331 seconds.\n",
+      "Executing `taskset -c 0,1 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 6170.84 | gp/s 8.69e+05\n",
+      "Finished executing in 4.428756237030029 seconds.\n",
+      "Executing `taskset -c 0,1 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 2165.84 | gp/s 9.64e+055\n",
+      "Finished executing in 12.671931982040405 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1499,7 +1499,10 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb to latex\n",
-      "[NbConvertApp] Writing 167532 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
+      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide_files/\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide_files\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide_files\n",
+      "[NbConvertApp] Writing 169279 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
