--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs.ipynb
@@ -61,6 +61,12 @@
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
+    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
+    "import shutil, os, sys, time     # Standard Python modules for multiplatform OS-level functions, benchmarking\n",
+    "\n",
+    "cmd.delete_existing_files(\"GiRaFFE_standalone_Ccodes/*\")\n",
+    "outdir = os.path.join(\"GiRaFFE_standalone_Ccodes/\")\n",
+    "cmd.mkdir(outdir)\n",
     "\n",
     "# Set the finite differencing order to 4.\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
@@ -249,7 +255,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for GiRaFFE RHSs in Cartesian coordinates.\n"
+      "Generating C code for GiRaFFE RHSs in Cartesian coordinates.\n",
+      "Output C function quantities_to_FD_for_rhs_eval() to file GiRaFFE_standalone_Ccodes/Prereqs.h\n",
+      "Output C function update_metric_det_inverse() to file GiRaFFE_standalone_Ccodes/metric_quantities.h\n",
+      "Output C function rhs_eval() to file GiRaFFE_standalone_Ccodes/Conservs.h\n"
      ]
     }
    ],
@@ -338,7 +347,7 @@
     "                  REAL *restrict in_gfs, REAL *restrict aux_gfs\"\"\",\n",
     "    preloop  = \"\"\"REAL invdx0 = 1.0/dxx[0];\n",
     "                  REAL invdx1 = 1.0/dxx[1];\n",
-    "                  REAL invdx2 = 1.0/dxx[2];\"\"\"\n",
+    "                  REAL invdx2 = 1.0/dxx[2];\"\"\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",Conservs_to_print,params=\"outCverbose=False\"),\n",
     "    loopopts = \"InteriorPoints,Enable_rfm_precompute\",\n",
     "    postloop = \"\"\"LOOP_REGION(0,Nxx_plus_2NGHOSTS[0],0,Nxx_plus_2NGHOSTS[1],0,Nxx_plus_2NGHOSTS[2]){\n",
@@ -382,17 +391,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_10.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_10.h\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:54: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:66: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:77: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:87: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:98: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:108: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:54: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:66: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:77: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:87: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:98: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:108: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Wrote to file \"GiRaFFE_standalone/B_from_A_8.h\"\n",
       "Wrote to file \"GiRaFFE_standalone/B_from_A_6.h\"\n",
       "Wrote to file \"GiRaFFE_standalone/B_from_A_4.h\"\n",
       "Wrote to file \"GiRaFFE_standalone/B_from_A_2.h\"\n",
       "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0D.h\"\n",
       "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0U.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1D.h\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-5-43638690dda0>:54: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if j is 0:\n",
+      "<ipython-input-5-43638690dda0>:66: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if j is 0:\n",
+      "<ipython-input-5-43638690dda0>:77: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if j is 1:\n",
+      "<ipython-input-5-43638690dda0>:87: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if j is 1:\n",
+      "<ipython-input-5-43638690dda0>:98: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if j is 2:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1U.h\"\n",
       "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2D.h\"\n",
       "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2U.h\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-5-43638690dda0>:108: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if j is 2:\n"
      ]
     }
    ],
@@ -531,17 +594,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to file \"CurviBoundaryConditions/gridfunction_defines.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions/xxminmax.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n"
+      "Wrote to file \"GiRaFFE_standalone_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
+      "Evolved gridfunction \"AD0\" has parity type 1.\n",
+      "Evolved gridfunction \"AD1\" has parity type 2.\n",
+      "Evolved gridfunction \"AD2\" has parity type 3.\n",
+      "Evolved gridfunction \"StildeD0\" has parity type 1.\n",
+      "Evolved gridfunction \"StildeD1\" has parity type 2.\n",
+      "Evolved gridfunction \"StildeD2\" has parity type 3.\n",
+      "Evolved gridfunction \"psi6Phi\" has parity type 0.\n",
+      "Auxiliary gridfunction \"AevolParen\" has parity type 0.\n",
+      "Auxiliary gridfunction \"BU0\" has parity type 1.\n",
+      "Auxiliary gridfunction \"BU1\" has parity type 2.\n",
+      "Auxiliary gridfunction \"BU2\" has parity type 3.\n",
+      "Auxiliary gridfunction \"PevolParenU0\" has parity type 1.\n",
+      "Auxiliary gridfunction \"PevolParenU1\" has parity type 2.\n",
+      "Auxiliary gridfunction \"PevolParenU2\" has parity type 3.\n",
+      "Auxiliary gridfunction \"SevolParenUD00\" has parity type 4.\n",
+      "Auxiliary gridfunction \"SevolParenUD01\" has parity type 5.\n",
+      "Auxiliary gridfunction \"SevolParenUD02\" has parity type 6.\n",
+      "Auxiliary gridfunction \"SevolParenUD10\" has parity type 5.\n",
+      "Auxiliary gridfunction \"SevolParenUD11\" has parity type 7.\n",
+      "Auxiliary gridfunction \"SevolParenUD12\" has parity type 8.\n",
+      "Auxiliary gridfunction \"SevolParenUD20\" has parity type 6.\n",
+      "Auxiliary gridfunction \"SevolParenUD21\" has parity type 8.\n",
+      "Auxiliary gridfunction \"SevolParenUD22\" has parity type 9.\n",
+      "Auxiliary gridfunction \"ValenciavU0\" has parity type 1.\n",
+      "Auxiliary gridfunction \"ValenciavU1\" has parity type 2.\n",
+      "Auxiliary gridfunction \"ValenciavU2\" has parity type 3.\n",
+      "Auxiliary gridfunction \"alpha\" has parity type 0.\n",
+      "Auxiliary gridfunction \"betaU0\" has parity type 1.\n",
+      "Auxiliary gridfunction \"betaU1\" has parity type 2.\n",
+      "Auxiliary gridfunction \"betaU2\" has parity type 3.\n",
+      "Auxiliary gridfunction \"gammaDD00\" has parity type 4.\n",
+      "Auxiliary gridfunction \"gammaDD01\" has parity type 5.\n",
+      "Auxiliary gridfunction \"gammaDD02\" has parity type 6.\n",
+      "Auxiliary gridfunction \"gammaDD11\" has parity type 7.\n",
+      "Auxiliary gridfunction \"gammaDD12\" has parity type 8.\n",
+      "Auxiliary gridfunction \"gammaDD22\" has parity type 9.\n",
+      "Auxiliary gridfunction \"gammaUU00\" has parity type 4.\n",
+      "Auxiliary gridfunction \"gammaUU01\" has parity type 5.\n",
+      "Auxiliary gridfunction \"gammaUU02\" has parity type 6.\n",
+      "Auxiliary gridfunction \"gammaUU11\" has parity type 7.\n",
+      "Auxiliary gridfunction \"gammaUU12\" has parity type 8.\n",
+      "Auxiliary gridfunction \"gammaUU22\" has parity type 9.\n",
+      "Auxiliary gridfunction \"gammadet\" has parity type 0.\n",
+      "Auxiliary gridfunction \"u4upperZero\" has parity type 0.\n",
+      "Wrote to file \"GiRaFFE_standalone_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n"
      ]
     }
    ],
    "source": [
     "import CurviBoundaryConditions.CurviBoundaryConditions as cbcs\n",
-    "cbcs.Set_up_CurviBoundaryConditions()"
+    "cmd.mkdir(os.path.join(outdir,\"boundary_conditions/\"))\n",
+    "cbcs.Set_up_CurviBoundaryConditions(os.path.join(outdir,\"boundary_conditions/\"))"
    ]
   },
   {
@@ -1636,19 +1741,46 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm`...\n",
-      "Finished executing in 1.61934399605 seconds.\n",
-      "Finished compilation.\n",
-      "Finished in 1.63118100166 seconds.\n",
-      "\n",
-      "\n",
-      "Now running at low resolution. Should take ~20 seconds...\n",
-      "\n",
-      "Executing `taskset -c 0,1,2,3 ./GiRaFFE_standalone_1D 1280 32 32 0.5`...\n",
-      "\u001b[2KIt: 32 t=0.10 | 100.0%; ETA 0 s | t/h 12.42 | gp/s 5.79e+06\n",
-      "Finished executing in 29.4349310398 seconds.\n",
-      "Finished in 29.4546689987 seconds.\n",
-      "\n",
-      "\n"
+      "GiRaFFE_standalone/GiRaFFE_standalone.c: In function ‘xxCart’:\n",
+      "GiRaFFE_standalone/GiRaFFE_standalone.c:65:10: fatal error: ../CurviBoundaryConditions/xxCart.h: No such file or directory\n",
+      " #include \"../CurviBoundaryConditions/xxCart.h\"\n",
+      "          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "compilation terminated.\n",
+      "Finished executing in 0.21174168586730957 seconds.\n",
+      "Most optimized compilation failed. Removing -march=native:\n",
+      "Executing `gcc -Ofast -fopenmp -funroll-loops GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm`...\n",
+      "GiRaFFE_standalone/GiRaFFE_standalone.c: In function ‘xxCart’:\n",
+      "GiRaFFE_standalone/GiRaFFE_standalone.c:65:10: fatal error: ../CurviBoundaryConditions/xxCart.h: No such file or directory\n",
+      " #include \"../CurviBoundaryConditions/xxCart.h\"\n",
+      "          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "compilation terminated.\n",
+      "Finished executing in 0.21982526779174805 seconds.\n",
+      "Next-to-most optimized compilation failed. Moving to maximally-compatible gcc compile option:\n",
+      "Executing `gcc -O2 GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm`...\n",
+      "GiRaFFE_standalone/GiRaFFE_standalone.c: In function ‘xxCart’:\n",
+      "GiRaFFE_standalone/GiRaFFE_standalone.c:65:10: fatal error: ../CurviBoundaryConditions/xxCart.h: No such file or directory\n",
+      " #include \"../CurviBoundaryConditions/xxCart.h\"\n",
+      "          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "compilation terminated.\n",
+      "Finished executing in 0.22043395042419434 seconds.\n",
+      "Sorry, compilation failed\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/penelson/jup38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3334: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -1690,21 +1822,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -1738,17 +1860,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2KProcessing file oldbc_out1280-00000032_exact.txt\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import savefig\n",
@@ -1790,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1817,24 +1931,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video width=\"480\" height=\"360\" controls>\n",
-       "  <source src=\"GiRaFFE_HO-1D_tests.mp4\" type=\"video/mp4\">\n",
-       "</video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%HTML\n",
     "<video width=\"480\" height=\"360\" controls>\n",
