GiRaFFE/1D_tests:Wrote documentation for initial data without if statements.

--- a/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='vector_ak'></a>\n",
+    "##### <a id='vector_ak'></a>\n",
     "\n",
     "# Step 2: Set the vector $A_k$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{vector_ak}$$\n",
@@ -136,6 +136,37 @@
     "1.3 \\gamma_\\mu x - 0.015 & \\mbox{if} & x \\geq 0.1/\\gamma_\\mu \\end{array} \\right. , \\\\\n",
     "A_z &= y - \\gamma_\\mu (1-\\mu)x .\n",
     "\\end{align}\n",
+    "\n",
+    "However, to take full advantage of NRPy+'s automated function generation capabilities, we want to write this without the `if` statements, replacing them with calls to `fabs()`. To do so, we will use rewrite these functions in terms of maxima and minima. Critically, we will define these functions in the following way: \n",
+    "\\begin{align}\n",
+    "\\min(a,b) &= \\tfrac{1}{2} \\left( a+b - \\lvert a-b \\rvert \\right) \\\\\n",
+    "\\max(a,b) &= \\tfrac{1}{2} \\left( a+b + \\lvert a-b \\rvert \\right). \\\\\n",
+    "\\end{align}\n",
+    "For real numbers, these operate exactly as expected. In the case $a>b$,\n",
+    "\\begin{align}\n",
+    "\\min(a,b) &= \\tfrac{1}{2} \\left( a+b - (a-b) \\right) = b \\\\\n",
+    "\\max(a,b) &= \\tfrac{1}{2} \\left( a+b + (a-b) \\right) = a, \\\\\n",
+    "\\end{align}\n",
+    "and in the cse $a<b$, the reverse holds:\n",
+    "\\begin{align}\n",
+    "\\min(a,b) &= \\tfrac{1}{2} \\left( a+b - (b-a) \\right) = a \\\\\n",
+    "\\max(a,b) &= \\tfrac{1}{2} \\left( a+b + (b-a) \\right) = b, \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "In code, we will represent this as:\n",
+    "```\n",
+    "min_noif(a,b) = sp.Rational(1,2)*(a+b-nrpyAbs(a-b))\n",
+    "max_noif(a,b) = sp.Rational(1,2)*(a+b+nrpyAbs(a-b))\n",
+    "```\n",
+    "Note the `_noif` suffix to avoid conflicts with other functions, and the use of `nrpyAbs()` function, which will always be interpreted as the C function `fabs()` (Sympy `Abs()` may get interpreted as $\\sqrt{zz^*}$, for instance).\n",
+    "\n",
+    "For convenience, we define two new positions, $x^+ = x+0.1/\\gamma_\\mu$ and $x^- = x-0.1/\\gamma_\\mu$. With these tools, we rewrite the $y$-component of the vector potential:\n",
+    "\\begin{align}\n",
+    "A_y =& 1.15 \\gamma_\\mu x - 0.15 \\gamma_\\mu \\left( \\min(x^-,0)-\\max(x^+,0) \\right) \\\\\n",
+    "     &+ g(x) \\frac{\\max(x^-,0) \\min(x^+,0)}{\\max(x^-,\\epsilon) \\min(x^+,\\epsilon)} \\\\\\\n",
+    "     &- 0.015 \\frac{\\min(x^-,0) \\max(x^+,0)}{\\min(x^-,\\epsilon) \\max(x^+,\\epsilon)}\n",
+    "\\end{align}\n",
+    "\n",
     "First, however, we must set $$\\gamma_\\mu = (1-\\mu^2)^{-1/2}$$ and $$g(x) = \\cos (5\\pi \\gamma_\\mu x)/\\pi$$.\n"
    ]
   },
