--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -61,10 +61,10 @@
     "\n",
     "##### Solving the Effective-One-Body Equations of Motion\n",
     "\n",
-    "+ Application (<font color='red'>**in progress**</font>): [SEOBNR: The Spinning-Effective-One-Body-Numerical-Relativity Hamiltonian](Tutorial-SEOBNR_Documentation.ipynb)\n",
+    "+ Application (<font color='red'>**in progress**</font>): [SEOBNR: The Spinning-Effective-One-Body-Numerical-Relativity Hamiltonian](on_standby/Tutorial-SEOBNR_Documentation.ipynb)\n",
     "    + Solving the SEOBNR Hamiltonian equations of motion\n",
-    "        + [Initial data: Setting the initial trajectory](Tutorial-SEOBNR_Initial_Conditions.ipynb)\n",
-    "        + [SymPy-generated exact derivatives of the SEOBNR Hamiltonian](Tutorial-Spinning_Effective_One_Body_Numerical_Relativity_Hamiltonian-Cartesian.ipynb)\n",
+    "        + [Initial data: Setting the initial trajectory](on_standby/Tutorial-SEOBNR_Initial_Conditions.ipynb)\n",
+    "        + [SymPy-generated exact derivatives of the SEOBNR Hamiltonian](on_standby/Tutorial-Spinning_Effective_One_Body_Numerical_Relativity_Hamiltonian-Cartesian.ipynb)\n",
     "\n",
     "### PART 3: Solving PDEs in Curvilinear Coordinate Systems\n",
     "+ [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
@@ -105,7 +105,7 @@
     "    + [<font color='purple'>**Colliding black holes!**</font>](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
     "    + [The \"Hydro without Hydro\" test: evolving the spacetime fields of TOV star with $T^{\\mu\\nu}$ assumed static](Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb) ***In progress***\n",
     "\n",
-    "### PART 5: Numerical Relativity $-$ General Relativistic Hydrodynamics (GRHD), Force-Free Electrodynamics (GRFFE) & Magnetohydrodynamics (GRMHD)\n",
+    "### PART 5: Numerical Relativity $-$ General Relativistic Hydrodynamics (GRHD), Force-Free Electrodynamics (GRFFE), & Magnetohydrodynamics (GRMHD)\n",
     "\n",
     "+ [The equations of general relativistic hydrodynamics, in Cartesian coordinates](Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
     "+ [The equations of general relativistic, force-free electrodynamics, in Cartesian coordinates](Tutorial-GRFFE_Equations-Cartesian.ipynb)\n",
