Add NRPy+ path to all GiRaFFE modules.

--- a/in_progress/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
@@ -55,6 +55,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 0: Add NRPy's directory to the path\n",
+    "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
     "import os\n",
     "import cmdline_helper as cmd\n",
     "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions\"\n",
@@ -669,21 +676,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
