--- a/in_progress/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/in_progress/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -93,6 +93,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 0: Add NRPy's directory to the path\n",
+    "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
     "import grid as gri\n",
