--- a/in_progress/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -105,6 +105,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 0: Add NRPy's directory to the path\n",
+    "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
