GiRaFFE/Ccode_library: Corrected some minor issues with the file paths.

--- a/in_progress/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "import os\n",
     "import cmdline_helper as cmd\n",
-    "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions\"\n",
+    "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions\"\n",
     "cmd.mkdir(outdir)"
    ]
   },
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Writing GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -288,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -388,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -495,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -539,7 +539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -598,7 +598,38 @@
      "text": [
       "Printing difference between original C code and this code...\n",
       "Checking file GiRaFFE_boundary_conditions.h\n",
-      "No difference. TEST PASSED!\n"
+      "--- GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditionsGiRaFFE_boundary_conditions.h\n",
+      "+++ GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditionsGiRaFFE_boundary_conditions.h\n",
+      "@@ -178,3 +178,28 @@\n",
+      "       out_gfs[IDX4pt(STILDED1GF,idx)] = out_gfs_exact[IDX4pt(STILDED1GF,idx)];\n",
+      "       out_gfs[IDX4pt(STILDED2GF,idx)] = out_gfs_exact[IDX4pt(STILDED2GF,idx)];*/\n",
+      " }\n",
+      "+\n",
+      "+void apply_bcs_EXACT_StildeD(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\n",
+      "+                             REAL *out_gfs,REAL *out_gfs_exact) {\n",
+      "+    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
+      "+    int imax[3] = { Nxx_plus_2NGHOSTS[0]-NGHOSTS, Nxx_plus_2NGHOSTS[1]-NGHOSTS, Nxx_plus_2NGHOSTS[2]-NGHOSTS };\n",
+      "+    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
+      "+      // After updating each face, adjust imin[] and imax[] \n",
+      "+      //   to reflect the newly-updated face extents.\n",
+      "+      // Right now, we only want to update the xmin and xmax faces with the exact data.\n",
+      "+      FACE_UPDATE_EXACT_StildeD(Nxx,Nxx_plus_2NGHOSTS,xx,out_gfs,out_gfs_exact,imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); \n",
+      "+      imin[0]--;\n",
+      "+      FACE_UPDATE_EXACT_StildeD(Nxx,Nxx_plus_2NGHOSTS,xx,out_gfs,out_gfs_exact,imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); \n",
+      "+      imax[0]++;\n",
+      "+\n",
+      "+      //FACE_UPDATE_EXACT_StildeD(Nxx,Nxx_plus_2NGHOSTS,xx,out_gfs,out_gfs_exact,imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); \n",
+      "+      imin[1]--;\n",
+      "+      //FACE_UPDATE_EXACT_StildeD(Nxx,Nxx_plus_2NGHOSTS,xx,out_gfs,out_gfs_exact,imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); \n",
+      "+      imax[1]++;\n",
+      "+\n",
+      "+      //FACE_UPDATE_EXACT_StildeD(Nxx,Nxx_plus_2NGHOSTS,xx,out_gfs,out_gfs_exact,imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); \n",
+      "+      imin[2]--;\n",
+      "+      //FACE_UPDATE_EXACT_StildeD(Nxx,Nxx_plus_2NGHOSTS,xx,out_gfs,out_gfs_exact,imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); \n",
+      "+      imax[2]++;\n",
+      "+    }\n",
+      "+}\n",
+      "ERROR: Disagreement found with .py file. See differences above.\n"
      ]
     }
    ],
@@ -652,7 +683,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 90825 bytes to Tutorial-GiRaFFE_HO_C_code_library-BCs.tex\n",
+      "[NbConvertApp] Writing 91044 bytes to Tutorial-GiRaFFE_HO_C_code_library-BCs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
