--- a/in_progress/Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb
@@ -84,9 +84,7 @@
     "\n",
     "import cmdline_helper as cmd\n",
     "import os\n",
-    "Ccodesdir = \"GiRaFFE_standalone_Ccodes\"\n",
-    "cmd.mkdir(os.path.join(Ccodesdir))\n",
-    "Ccodesdir += \"/PPM\"\n",
+    "Ccodesdir = \"GiRaFFE_standalone_Ccodes/PPM\"\n",
     "cmd.mkdir(os.path.join(Ccodesdir))"
    ]
   },
@@ -137,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
+      "Overwriting GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
      ]
     }
    ],
@@ -576,7 +574,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb to latex\n",
-      "[NbConvertApp] Writing 79076 bytes to Tutorial-GiRaFFE_HO_Ccode_library-PPM.tex\n",
+      "[NbConvertApp] Writing 77811 bytes to Tutorial-GiRaFFE_HO_Ccode_library-PPM.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
