--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -89,6 +89,11 @@
     }
    ],
    "source": [
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
     "# First we import needed core NRPy+ modules\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
